# human-gazebo

./: CMakeLists.txt  README.md  package.xml
includes/human-gazebo/: motion_capture.h
includes/obstacles/: motion_capture.h
launch/: test_human_work.launch
models/human_work/: model.sdf
models/human_work_2/: model.sdf
src/: motion_capture.cc
world/: concert_with_human.sdf  concert_with_two_humans.sdf
